<resources>
    <string name="app_name">P0MyAppPortfolio</string>

    <string name="titleText">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer App</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger App</string>
    <string name="reader">XYZ READER App</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="mainActivityText">My App Portfolio</string>
</resources>
