<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <TextView android:text="@string/titleText" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <Button

        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:text="@string/spotify"
        android:id="@+id/button1"
        style="@style/ButtonStyle"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:text="@string/scoresApp"
        style="@style/ButtonStyle"
        android:id="@+id/button2"
        />
    <Button

        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:text="@string/libraryApp"
        style="@style/ButtonStyle"
        android:id="@+id/button3"
        />
    <Button

        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:text="@string/buildItBigger"
        style="@style/ButtonStyle"
        android:id="@+id/button4"
        />
    <Button

        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:text="@string/reader"
        style="@style/ButtonStyle"
        android:id="@+id/button5"
        />
    <Button

        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:text="@string/capstone"
        android:background="#ff0000"
        style="@style/ButtonStyle"
        android:id="@+id/button6"
        />


</RelativeLayout>
